--- a/Golang/2.网络编程/网络编程.md
+++ b/Golang/2.网络编程/网络编程.md
@@ -179,7 +179,27 @@
 
 > *TCP数据传递模式为流模式，在保持长链接时候可以进行多次发送和接收，在提交数据给TCP时，TCP会进行缓存等待发送，使其两次数据包一一个报文方式发出或接收*
 >
-> 
+> **防止tcp粘包**
+>
+> - 发送固定长度消息
+> - 使用特殊记号消息间隔
+> - 将消息的尺寸和消息一起发送
+
+#### **Redis协议**
+
+> 基于tcp，使用CRLF字符结尾，防止tcp粘包，使用特殊标记进行消息隔离
+>
+> [Redis 协议](http://redisdoc.com/topic/protocol.html)
+
+#### **http协议** 
+
+> 分请求行，请求头，请求体，以\r\n标识结尾
+
+
+
+
+
+
 
 
 
