--- a/中间件/消息队列/消息队列.md
+++ b/中间件/消息队列/消息队列.md
@@ -110,6 +110,8 @@
   >   - Retain：保留表示
   >   - 剩余长度
   >
-  >   
-  >
+  
+- #### **STOMP**（Streaming Text Orientated Message Protocol 流文本定向消息协议）
+
+  > 
 
