--- a/中间件/消息队列/消息队列.md
+++ b/中间件/消息队列/消息队列.md
@@ -113,5 +113,137 @@
   
 - #### **STOMP**（Streaming Text Orientated Message Protocol 流文本定向消息协议）
 
+  > *提供双向操作的连接格式，允许客户端与任意消息服务进行交互[STOMP](http://stomp.github.io/)*
+  >
+  > 实现STOMP协议服务组件：Apache Apollo  Apache ActiveMQ，RabbitMQ，HornetQ，StompServer
+  >
   > 
+  >
+  >  **STOMP数据格式**
+  >
+  > *Command：第一行，以EOL符结束，第二行是帧头，由冒号组成的键值对，以换行符结束，第三行是Body，以特殊字符^@结束*
+  >
+  > ![image-20230105105007231](img\image-20230105105007231.png) 
+  >
+  > **Command：**
+  >
+  > - CONNECT：客户端连接命令
+  >
+  > - DISCONNECT：客户端断开与服务器连接
+  >
+  > - SEND：客户端发送消息命令
+  >
+  >   > ![image-20230105105523655](img\image-20230105105523655.png) 
+  >
+  > - SUBSCRIBE/UNSUBSCRIBE：客户端订阅某个目的地消息，与Send一样
+  >
+  >   > ![image-20230105105912216](img\image-20230105105912216.png) ![image-20230105105932064](D:\computer-program-language\中间件\消息队列\img\image-20230105105932064.png) 
+  >
+  > - BEGIN ：开启事务，用于发送消息和确认已经收到消息（发送与确认被视为原子操作）
+  >
+  > - COMMIT ：事务提交到处理队列中
+  >
+  > - ABORT：客户端终止正在执行的事务
+  >
+  > - ACK：在Client模式下确认收到一个订阅消息
+  >
+  > - NACK ：客户端返回服务器没处理改消息，服务器将该消息重新发送到另一个客户端或者丢弃
+  >
+  > - STOMP：客户端以STOMP方式连接服务器
+  >
+  >   > ![image-20230105105433242](img\image-20230105105433242.png) 
+  >
+  >   ---
+  >
+  > - CONNECTED：服务端接收到CONNECT命令后返回CONNECTED帧
+  >
+  > - MESSAGE：服务器返回客户端订阅消息
+  >
+  > - RECEIPT：服务器接收到请求后需要告知客户端
+  >
+  > - ERROR
+  >
+  >  **Header：**
+  >
+  > - content-length：标识Body大小
+  > - content-type：在Send，Message，Error命令下，描述Body格式，否则将当作二进制数据处理
+  > - receipt：除Conntect命令外，然后帧都可以设置该Header，服务器在确认时将会使用RCEIPT 命令来处理。
+  
+- #### **~~XMPP~~** ~~(可扩展通信与表示协议，基于XML的流式即时通信协议)~~
+
+- #### **JMS** (Java Message Service Java消息服务应用接口)
+
+  > *Java 平台中面向消息中间件的一套规范的JavaAPI接口，类似JDBC由具体厂家实现消息通信*
+  >
+  > - 点对点模型（Point to Point)
+  >
+  >   > 应用程序由Queue，Sender，Receive组成，每条消息只有一个接收者，消息发送后，不管接收者是否存在，都会保存到队列中。
+  >   >
+  >   > ![image-20230105112627657](img\image-20230105112627657.png) 
+  >
+  > - 发布订阅模型（Pub/Sub)
+  >
+  >   > 应用程序由Topic，Publish，Subscriber组成，发布者发布消息到主题上传递所有的订阅者（广播）
+  >   >
+  >   > ![image-20230105112749951](img\image-20230105112749951.png) 
+  >
+  > **JMS组件**
+  >
+  > - Producer
+  > - Consumer
+  > - Client
+  > - Queue：消息容器，对应点对点模型中队列
+  > - Topic
+  > - Message
+  >
+  > **JMS接口**
+  >
+  > - ConnectionFactory：创建连接对象，主要实现子类QueueConnectionFactory，TopicConectionFactory
+  > - Destination：消息发布或接收地点对象（主题或队列）
+  > - Connection：TCP/IP Socket 包装
+  > - Session：实际查找消息接口，用于发送接收消息
+  > - MessageProducer：消息生产者接口，由Session创建并发送到Destination。分为同步、异步方式发送
+  > - MessageConsumer：消息消费者接口，由Session创建。
+  > - Message：消息传递对象
+  > - MessageListener：消息监听者，监听消息处理事件。
+  >
+  > **JMS2.0接口**
+  >
+  > - JMSContext：代替Connection和Session
+  > - JMSProducer：代替MessageProducer支持链式操作
+  > - JMSConsumer：代替MessageConsumer
+  
+- #### **RabbitMQ**
+
+  > 基于AMQP标准开发的消息中间件，用于分布式系统中存储转发消息，具有可靠性保证，灵活路由，支持消息集群，具有高可用，支持多种协议（通过插件实现MQTT，STOMP协议），多语言客户端，后台管理页面（MannagementUI），跟踪机制（异常消息排查），插件扩展。
+  >
+  > ![image-20230105162412557](img\image-20230105162412557.png) 
+  >
+  > - Message：消息体不透明，消息头包含routing-key，priority，delivery-mode等信息
+  >
+  > - Publish：客户端应用程序
+  >
+  > - Exchange：接收客户端发送消息并路由到队列
+  >
+  >   > - Direct：交换机与队列进行**一对一绑定**，生产者发送数据需要指定交换机
+  >   >
+  >   > - Topic：交换机可以同时与多个队列绑定，可以通过RouteKey(*，#)决定发送到那些队列。
+  >   >
+  >   >   生产者发送数据需要指定交换机及主题。
+  >   >
+  >   > - Fanout：广播到所有队列供多个消费者消费，转发消息最快
+  >   >
+  >   > - ~~Header~~
+  >
+  > - Binding：决定交换器被绑定到那个队列上
+  >
+  > - Queue：保存消息，等待对应的消费者进行消费
+  >
+  > - Channel：信道，多路复用中单独双向数据流，建立在TCP通信基础上
+  >
+  > - Broker：RabbitMQ服务器实例
+  >
+  > 
+
+
 
