--- a/中间件/消息队列/消息队列.md
+++ b/中间件/消息队列/消息队列.md
@@ -1,6 +1,6 @@
 ## 消息队列
 
-消息队列(MQ)是一种系统间相互协作的通信机制，应用在异步处理，系统解耦，流量削峰，日志收集，事务最终一致性。消息队列的主要组件有Broker（消息处理中心，负责消息的接收，存储，转发），Producer，Consumer。
+消息队列(MQ)是一种系统间相互协作的通信机制，应用在异步处理，系统解耦，流量削峰，日志收集，事务最终一致性（两阶段提交2PC，补偿事务TCC，本地事件表加消息队列，MQ事务消息）。消息队列的主要组件有Broker（消息处理中心，负责消息的接收，存储，转发），Producer，Consumer。
 
 - #### **AMQP** (Advanced Message Queuing Protocol)  
 
@@ -215,7 +215,7 @@
   
 - #### **RabbitMQ**
 
-  > 基于AMQP标准开发的消息中间件，用于分布式系统中存储转发消息，具有可靠性保证，灵活路由，支持消息集群，具有高可用，支持多种协议（通过插件实现MQTT，STOMP协议），多语言客户端，后台管理页面（MannagementUI），跟踪机制（异常消息排查），插件扩展。
+  > *基于AMQP标准开发的消息中间件，用于分布式系统中存储转发消息，具有可靠性保证，灵活路由，支持消息集群，具有高可用，支持多种协议（通过插件实现MQTT，STOMP协议），多语言客户端，后台管理页面（MannagementUI），跟踪机制（异常消息排查），插件扩展。*
   >
   > ![image-20230105162412557](img\image-20230105162412557.png) 
   >
@@ -239,11 +239,106 @@
   >
   > - Queue：保存消息，等待对应的消费者进行消费
   >
+  >   > - 排他队列（exclusive)：首次声明队列时使用连接可见，并在断开时自动删除
+  >   > - 临时队列(autoDelete)：没有消费者订阅时删除队列
+  >   > - 队列中消息持久化：设置重启服务是否保存消息（发送消息时设置BasicProperties.Persistent_text_plain)
+  >
   > - Channel：信道，多路复用中单独双向数据流，建立在TCP通信基础上
   >
   > - Broker：RabbitMQ服务器实例
   >
+  > - VirtualHost：RabbitMQ的虚拟主机，不同的虚拟主机交换机，队列不共享
+  >
   > 
+  >
+  >  **消息确认模式**（对于生产者）
+  >
+  > - 基于AMQP协议的事务：需要同步等待Broker执行结果，性能有所减低
+  >
+  > - Publish Confirm：在信道发布的消息都会分配一唯一ID，消息投递到队列中，信道会向生产者发生确认消息（异步执行）
+  >
+  >   > - 普通确认：发生消息后就调用waitForConfirms等待Broker的确认（串行方式，超时重发）
+  >   > - 批量确认：发生一批消息后再调用waitForConfirms
+  >   > - 异步确认：调用addConfirmListeren方法注册回调（计数判断）
+  >
+  > **消费应答**（对于消费者）
+  >
+  > - 自动回执：Broker成功发送给消费者后立即删除队列中消息
+  >
+  > - 手动回执：显式发送ACK，在try-catch-finally中判断
+  >
+  > - 拒绝消息：当消费者处理失败或当期不能处理该消息时
+  >
+  >   > <img src="img\image-20230106161905004.png" alt="image-20230106161905004" style="zoom:67%;" /> 
+  >   >
+  >   > *当一个队列只有一个消费者时，需要确定不会因为拒绝消费而导致该消费者循环读取*
+  >
+  > - 消息预读：设置消费者预读取数量（收到下一个确认回执前一次最多可以消费多少消息）
+  >
+  >   > ![image-20230106162428756](img\image-20230106162428756.png) 
+  >
+  > **流控机制**
+  >
+  > *当RabbitMQ服务器出现系统资源达到设置的阈值时，触发流控机制减缓/阻塞生产者发送消息*
+  
+- #### **ActiveMQ**
+  
+  > *ActiveMQ实现JMS，JMX管理，主从管理，消息组同学，消息优先级，延迟接收消息，虚拟接收者，消息持久化，消息队列监控等*
+  >
+  > - 支持多语言客户端，多协议（OpenWire，STOMP，AMQP，MQTT）
+  > - 完全支持JMS1.1和J2EE1.4规范
+  > - 多网络连接模式（in-VM，TCP，SSL，NIO，UDP，JGroups，JXTA）
+  > - 提供RestApi接口
+  > - 支持Ajax方式连接ActiveMQ，轻松与CXF，WebService技术整合，提供可靠消息传递
+  >
+  >  **ActiveMQ组件**（与JMS相同）
+  >
+  > - Broker
+  > - Producer
+  > - Consumer
+  > - Topic：实现消息广播
+  > - Queue
+  > - Message
+  >
+  >  
+  >
+  > **ActiveMQ连接器**
+  >
+  > - 传输连接器（客户端连接）
+  >   - vm：客户端和服务器在同一个JVM中，避免网络开销
+  >   - tcp
+  >   - udp
+  >   - stomp
+  >   - http、https
+  >   - ws
+  > - 网络连接器（服务器集群连接）
+  >   - <img src="img\image-20230106164804198.png" alt="image-20230106164804198" style="zoom:50%;" /> 
+  >   - static：静态代理配置：static://(tcp:ip:port,tcp://ip2:port)
+  >   - multicast：多点传输协议
+  >
+  >  
+  >
+  > **消息存储**
+  >
+  > - AMQ：基于日志方式持久化（不支持事务）
+  > - KahaDB：基于文件并支持事务的存储方式
+  > - JDBC：基于JDBC方式存储在关系数据库中（比较慢）
+  > - 内存存储
+  > - LevelDB：持久化引擎，性能高于KahaDB
+  >
+  >  
+  >
+  > **基于ActiveMQ的分布式事务**（本地事件列表添加消息队列方式实现）
+  >
+  > 1. 在分布式数据库中建立事件表（type，process，content，create_time，update_time....)等字段
+  > 2. 发起业务请求，在数据库A中创建数据，并在事件表t_event中记录该事件，提交该事务
+  > 3. 在业务中开启动定时任务查询数据库A中t_event中所有process为NEW的记录，存在记录则向ActiveMQ发送消息，消息内容为t_event中content参数，消息发送成功后把该条数据状态改为Published，提交事务
+  > 4. 消费者接收到ActiveMQ消息后在数据库B中t_event中新增一条process为Publish的记录，保存消息成功后返回并提交事务
+  > 5. 在业务系统中开启
+  >
+  > 
+  
+  
 
 
 
