--- a/中间件/消息队列/消息队列.md
+++ b/中间件/消息队列/消息队列.md
@@ -300,7 +300,7 @@
   > - Queue
   > - Message
   >
-  >  
+  > 
   >
   > **ActiveMQ连接器**
   >
@@ -316,7 +316,7 @@
   >   - static：静态代理配置：static://(tcp:ip:port,tcp://ip2:port)
   >   - multicast：多点传输协议
   >
-  >  
+  > 
   >
   > **消息存储**
   >
@@ -326,19 +326,69 @@
   > - 内存存储
   > - LevelDB：持久化引擎，性能高于KahaDB
   >
-  >  
+  > 
+  >
+  > 
   >
   > **基于ActiveMQ的分布式事务**（本地事件列表添加消息队列方式实现）
   >
   > 1. 在分布式数据库中建立事件表（type，process，content，create_time，update_time....)等字段
-  > 2. 发起业务请求，在数据库A中创建数据，并在事件表t_event中记录该事件，提交该事务
-  > 3. 在业务中开启动定时任务查询数据库A中t_event中所有process为NEW的记录，存在记录则向ActiveMQ发送消息，消息内容为t_event中content参数，消息发送成功后把该条数据状态改为Published，提交事务
-  > 4. 消费者接收到ActiveMQ消息后在数据库B中t_event中新增一条process为Publish的记录，保存消息成功后返回并提交事务
-  > 5. 在业务系统中开启
+  > 2. 开启定时任务扫描事件表中新增的事件，将事件消息通过ActiveMQ发送到对应系统并更改process状态
+  > 3. 消费者接收到事件消息后将事件存入事件表，并将事件消息转化对象入库到业务表中，保存成功后修改事件表中状态
   >
-  > 
+  > <img src="img\image-20230107215226678.png" alt="image-20230107215226678" style="zoom:67%;" /> 
+  >
+  >  
+  >
+  > **ActiveMQ配置**
+  >
+  > - **消息转发模式**：PERSISTENT（持久化）NON_PERSISTENT（非持久化）
+  >   - java.jms.MessageProducer
+  >   - ![image-20230107215838026](img\image-20230107215838026.png) 
+  >   - NON_PERSISTENT模式下发送消息异步，Producer不需要等待Consumer的receipt消息
+  >   - PERSISTENT模式下需要把消息存储后在传递
+  > - **消息积压**
+  >   - 设置消息过期时间
+  >   - 死信队列（DLQ）：用来保存处理失败或过期的消息（默认失败6次放入死信队列）
+  > - **消息事务**
+  >   - JMS Transaction：使用Session接口的commit和rollback控制
+  >   - XA Transaction：两段式提交协议
+  > - **消息应答**
+  >   - AUTO_ACKNOWLEDGE：自动确认，当消费者通过receive或onMessage方法成功时，Session自动确定消息处理成功
+  >   - CLIENT_ACKNOWLEDGE：客户端手动确认，使用acknowledge方法签收消息
+  >   - DUPS_OK_ACKNOWLEDGE：自动批量确定，可能导致消息重复消费
+  >   - INDIVIDUAL_ACKNOWLEDGE：性能差
   
-  
+
+#### **Kafka**
+
+> *基于分布式的发布/订阅消息系统*
+>
+> - 高吞吐量，以时间复杂度为O(1)的方式提供消息持久化能力，对TB及以上的数据保证常数时间访问性能
+> - 消息持久化到磁盘
+> - 支持服务器间的消息分区与分布式消费，保证Partition内消息顺序传输
+> - 消费者主动拉取数据，消息处理状态在消费端维护
+> - 支持离线处理
+>
+> ![image-20230107223208601](img\image-20230107223208601.png) 
+>
+> **Kafka组件**
+>
+> - Broker
+>
+> - Topic：消息类型，在分布式下Topic的消息被存放到多个Broker上
+>
+> - Partition：物理Topic分区，一个Topic可以分为多个Partition，每个Partition都是一个有序队列，Patition中的消息都会被分配一个有序ID(offset)
+>
+> - Producer
+>
+> - Consumer
+>
+> - Consumer Group：实现Kafka消息广播和单播方案，**一个Topic可以有多个消费组，消费组中只有一个消费者获得消息**，实现消息广播必须有多个消费组，并且消费组中只有一个消费者
+>
+>   
+
+   
 
 
 
