--- a/中间件/消息队列/消息队列.md
+++ b/中间件/消息队列/消息队列.md
@@ -58,9 +58,7 @@
   > - Subscription：订阅包含一个主题过滤器和Qos服务质量等级。
   > - MQTT Control Packet：网络连接发送的消息数据包
   >
-  >  
-  >
-  > **MQTT数据流转**
+  >  **MQTT数据流转**
   >
   > 1. 建立连接，客户端发送服务器第一个报文必须是CONNECT，服务器发送CONNACK报文响应客户端
   >
@@ -81,13 +79,13 @@
   > 4. 心跳检测，客户端发送PingReq报文给服务器
   >
   >    1. 确认网络连接没有断开
-  >    2. 确认服务器，客户端能正常通讯
-  >
+  >   2. 确认服务器，客户端能正常通讯
+  > 
   >  5. 断开连接，客户端向服务器发送Disconnect报文，表示客户端断开连接
   >
-  >    
+  > 
   >
-  > **MQTT数据格式**
+  >    **MQTT数据格式**
   >
   > ![image-20230102152242604](img\image-20230102152242604.png) 
   >
@@ -106,10 +104,10 @@
   > - Publish类型报文标识，用来标识通信质量
   >
   >   - DUP：重发标识，用来保证消息可靠传输。
-  >   - Qos：服务质量等级
+  >  - Qos：服务质量等级
   >   - Retain：保留表示
   >   - 剩余长度
-  >
+  > 
   
 - #### **STOMP**（Streaming Text Orientated Message Protocol 流文本定向消息协议）
 
@@ -137,7 +135,7 @@
   >
   > - SUBSCRIBE/UNSUBSCRIBE：客户端订阅某个目的地消息，与Send一样
   >
-  >   > ![image-20230105105912216](img\image-20230105105912216.png) ![image-20230105105932064](D:\computer-program-language\中间件\消息队列\img\image-20230105105932064.png) 
+  >   > ![image-20230105105912216](img\image-20230105105912216.png) ![image-20230105105932064](img\image-20230105105932064.png)  
   >
   > - BEGIN ：开启事务，用于发送消息和确认已经收到消息（发送与确认被视为原子操作）
   >
@@ -291,7 +289,7 @@
   > - 提供RestApi接口
   > - 支持Ajax方式连接ActiveMQ，轻松与CXF，WebService技术整合，提供可靠消息传递
   >
-  >  **ActiveMQ组件**（与JMS相同）
+  >  **基本概念**（与JMS相同）
   >
   > - Broker
   > - Producer
@@ -372,21 +370,110 @@
 >
 > ![image-20230107223208601](img\image-20230107223208601.png) 
 >
-> **Kafka组件**
+> **基本概念**
 >
 > - Broker
 >
 > - Topic：消息类型，在分布式下Topic的消息被存放到多个Broker上
 >
-> - Partition：物理Topic分区，一个Topic可以分为多个Partition，每个Partition都是一个有序队列，Patition中的消息都会被分配一个有序ID(offset)
+> - (Partition)：物理Topic分区，一个Topic可以分为多个Partition，每个Partition都是一个有序队列，Patition中的消息都会被分配一个有序ID(offset)
+>
+>   > Partition是kafka基本存储单元分区，Partition中包含一个或多个Segment，每个Segment包含数据文件和一个与之对应的文件索引，从逻辑上看Partition为数据组，offset为下标，**只能顺序从Partition中读取数据**。一般可以通过增加Patition的数量提高系统吞吐率（增加消息延迟，消费者订阅该主题数量不能超过Patition数量），**生产者对于Partition写可视为并行操作**（没指定partition，key，kafka将轮询方式写入partition)，**消费者并发数量取决于Partition的数量**（消费者数量<=Partition）
 >
 > - Producer
 >
 > - Consumer
 >
-> - Consumer Group：实现Kafka消息广播和单播方案，**一个Topic可以有多个消费组，消费组中只有一个消费者获得消息**，实现消息广播必须有多个消费组，并且消费组中只有一个消费者
+> - Consumer Group：实现Kafka消息广播和单播方案，**一个Topic可以有多个消费组，消费组中只有一个消费者获得消息**，实现消息广播必须有多个消费组
 >
->   
+> **基于Kafka日志收集**
+>
+> - kafka-log4j-appender：log4j与Kafka集成收集包
+>
+>   > 日志文件配置
+>   >
+>   > ~~~properties
+>   > log4j.rootLogger=INFO,console,KAFKA
+>   > log4j.appender.console.target=System.out
+>   > log4j.appender.console.encoding=UTF-8
+>   > log4j.appender.console.layout=org.apache.log4j.PatterenLayout
+>   > log4j.appender.console.ConversionPattern=%d (%t) [%p - %l] %m%n
+>   > # 输出到kafka
+>   > log4j.appender.KAFKA==org.apache.kafka.log4jappender.KafkaLog4jAppender
+>   > log4j.appender.KAFKA.topic=log4j-topic
+>   > log4j.appender.KAFKA.brokerList=localhost:9092
+>   > # 消息日志是否压缩
+>   > log4j.appender.KAFKA.conpressionType=none
+>   > log4j.appender.KAFKA.syncSend=true
+>   > log4j.appender.console.layout=org.apache.log4j.PatterenLayout
+>   > log4j.appender.console.ConversionPattern=%d (%t) [%p - %l] %m%n
+>   > ~~~
+>
+> **Kakfa集群**
+>
+> *通过zk选举出leader，其他副本为follower，所有的生产者数据都发送给leader服务器，然后再由leader把消息发送给follower，follower不处理客户端请求，责任是从leader中复制数据。*
+>
+> **Kakfa发送消息模式**
+>
+> - 立即发送：不关心消息发送的结果
+> - 同步发送：调用send方法后，获取该方法的Future对象
+> - 异步发送：先注册回调函数，调用send方法把回调函数作为入场传递，接收者发送成功后将执行回调
+>   - ![image-20230109152828292](img\image-20230109152828292.png) 
+> - 消息发送确认：asks属性配置，0表示不等Broker确认，1：由leader确认，2：所有的leader，follower确认
+> - 消息重发：设置重发次数阈值及重发间隔
+> - 批次发送：设置bach.size属性打包后通过网络传输，linger.ms 消息再缓存中最长时间
+>
+> **Kakfa消费者模式**
+>
+> - 消费者组（Consumer Group）：同一组内所有的消费者共享主题中所有分区消息，但一个分区只能由消防组中一个消费者消费。一个Topic可以有多个消费组，Topic中消息将复制到所有消费组中
+> - 再均衡：消费组中有新消费者加入或退出，则Partition所有权将从一个消费者转移到另一个消费者（Broker发送心跳消息检测是否有消费者退出，消费者退出或加入都会导致再均衡，会导致整个主题消费者端阻塞）
+> - 消息偏移量：kafka与其他MQ不同的是Broker端不会保存消息的状态，所有的消息在消费时候返回当前消息的offset（Partition分区指针）**存储在客户端（消费者）中**，下次pull时候通过移动offset获取下一条消息。当消费组再均衡时，由于Partition所有权发生变动会清空所有消费者的offset，消费者需要从CommitOffset中读取该分区最后一次提交的偏移量。
+>   - 自动提交偏移量（CommitOffset）：enable.auto.commit与auto.commit.interval.ms配置开启自动提交偏移量和提交间隔时间**（在提交间隔时间内发生再均衡将导致消息重复消费）**
+>   - 手动提交：
+>     1. consumer.commitSync()该方法是阻塞的，限制消费端吞吐量
+>     2. consumer.commitAsync(OffsetCommitCallback callback)
+
+#### **RockerMQ**
+
+  > - 扩展性强（支持水平扩展）
+  > - 海量消息堆积能力（零拷贝，亿级消息堆积，吞吐量低于Kafka）
+  > - 支持顺序消息（保证生产者，消费者消息顺序一致）
+  > - 支持服务端消息过滤
+  > - **支持事务消息（RocketMQ，ActiveMQ）**
+  > - 支持消息回溯消费：消费者对已经成功消费的消息按时间进行重新消费
+  > - 支持消息延迟处理
+  >
+  > **基本概念**
+  >
+  > - Topic：标识同一类业务逻辑的消息。定义数据的分类隔离，定义数据的身份和权限
+  >
+  > - MessageType：按照消息传输特性的不同而定义的分类，用于类型管理和安全校验
+  >
+  >   1. 普通消息
+  >   2. 顺序/并行消息
+  >   3. 事务消息
+  >   4. 定时/延时消息
+  >   5. 集群消费和广播消费
+  >
+  > - MessageQueue：消息存储和传输的实际容器，也是消息的最小存储单元（所有主题都是由多个队列组成，以此实现队列数量的水平拆分和队列内部的流式存储。队列通过QueueId来做唯一标识和区分）
+  >
+  > - Message
+  >
+  > - Tag：子主题
+  >
+  > - Producer：同步、异步、单向发送
+  >
+  > - Consumer
+  >
+  >   - pull：消费者主动向服务器拉去数据
+  >   - push：Broker推送消息给消费者
+  >
+  > - Broker
+  >
+  >   - 单Master
+  >   - 多Master（宕机节点消息不可订阅）
+  >   - 多Master多Slave（同步双写，性能低，发送消息延迟高，异步复制，Master宕机后部分数据不可用）
+  
 
    
 
