--- a/中间件/消息队列/消息队列.md
+++ b/中间件/消息队列/消息队列.md
@@ -455,7 +455,9 @@
   >   4. 定时/延时消息
   >   5. 集群消费和广播消费
   >
-  > - MessageQueue：消息存储和传输的实际容器，也是消息的最小存储单元（所有主题都是由多个队列组成，以此实现队列数量的水平拆分和队列内部的流式存储。队列通过QueueId来做唯一标识和区分）
+  > - MessageQueue：消息存储和传输的实际容器，也是消息的最小存储单元（所有主题都是由多个队列组成，以此实现队列数量的水平拆分和队列内部的流式存储。队列通过QueueId来做唯一标识和区分，**RockerMQ会轮询主题下的所有队列将消息发送队列**）
+  >
+  >   > ![image-20230110101355169](img\image-20230110101355169.png) 
   >
   > - Message
   >
@@ -473,9 +475,12 @@
   >   - 单Master
   >   - 多Master（宕机节点消息不可订阅）
   >   - 多Master多Slave（同步双写，性能低，发送消息延迟高，异步复制，Master宕机后部分数据不可用）
-  
+  >   
+  > - 名称服务器：保存Broker相关元数据，用于集群Broker水平扩展
+  >
+  >   
 
-   
+
 
 
 
