--- a/中间件/消息队列/消息队列.md
+++ b/中间件/消息队列/消息队列.md
@@ -1,6 +1,6 @@
 ## 消息队列
 
-消息队列(MQ)是一种系统间相互协作的通信机制，应用在异步处理，系统解耦，流量削峰，日志收集，事务最终一致性（两阶段提交2PC，补偿事务TCC，本地事件表加消息队列，MQ事务消息）。消息队列的主要组件有Broker（消息处理中心，负责消息的接收，存储，转发），Producer，Consumer。
+消息队列(MQ)是一种系统间相互协作的通信机制，应用在异步处理，系统解耦，流量削峰，日志收集，事务最终一致性（两阶段提交2PC，SAGA算法，补偿事务TCC，本地事件表加消息队列，MQ事务消息）。消息队列的主要组件有Broker（消息处理中心，负责消息的接收，存储，转发），Producer，Consumer。
 
 - #### **AMQP** (Advanced Message Queuing Protocol)  
 
@@ -450,7 +450,7 @@
   > - MessageType：按照消息传输特性的不同而定义的分类，用于类型管理和安全校验
   >
   >   1. 普通消息
-  >   2. 顺序/并行消息
+  >   2. 顺序/并行消息：
   >   3. 事务消息
   >   4. 定时/延时消息
   >   5. 集群消费和广播消费
@@ -475,10 +475,22 @@
   >   - 单Master
   >   - 多Master（宕机节点消息不可订阅）
   >   - 多Master多Slave（同步双写，性能低，发送消息延迟高，异步复制，Master宕机后部分数据不可用）
-  >   
+  >
   > - 名称服务器：保存Broker相关元数据，用于集群Broker水平扩展
   >
-  >   
+  >  **基于RocketMQ的分布式事务**（基于2PC两阶段提交）
+  >
+  > <img src="img\image-20230111103511300.png" alt="image-20230111103511300" style="zoom: 50%;" /><img src="img\image-20230111105154386.png" alt="image-20230111105154386" style="zoom: 50%;" />
+  >
+  > 1. 系统A向MQ发送预备消息，确保消息到达Broker中保存
+  > 2. 系统A提交本地事务，根据本地事务执行结果向MQ发送提交消息，二次确认
+  > 3. 消息中间件接收二次确认后，把消息状态设置为可消费，等待订阅者接收消息，消费者基于事件驱动事务，事务提交失败则消息会被MQ重新投递直到事务提交
+  >
+  > ![image-20230111105413290](img\image-20230111105413290.png) 
+  >
+  > ![image-20230111113252940](img\image-20230111113252940.png) 
+  >
+  > 
 
 
 
