--- a/中间件/消息队列/消息队列.md
+++ b/中间件/消息队列/消息队列.md
@@ -376,7 +376,7 @@
 >
 > - Topic：消息类型，在分布式下Topic的消息被存放到多个Broker上
 >
-> - (Partition)：物理Topic分区，一个Topic可以分为多个Partition，每个Partition都是一个有序队列，Patition中的消息都会被分配一个有序ID(offset)
+> - Partition：物理Topic分区，一个Topic可以分为多个Partition，每个Partition都是一个有序队列，Patition中的消息都会被分配一个有序ID(offset)
 >
 >   > Partition是kafka基本存储单元分区，Partition中包含一个或多个Segment，每个Segment包含数据文件和一个与之对应的文件索引，从逻辑上看Partition为数据组，offset为下标，**只能顺序从Partition中读取数据**。一般可以通过增加Patition的数量提高系统吞吐率（增加消息延迟，消费者订阅该主题数量不能超过Patition数量），**生产者对于Partition写可视为并行操作**（没指定partition，key，kafka将轮询方式写入partition)，**消费者并发数量取决于Partition的数量**（消费者数量<=Partition）
 >
