数据备份与恢复

--- a/数据库/Oracle/3.数据备份与恢复/数据备份与恢复.md
+++ b/数据库/Oracle/3.数据备份与恢复/数据备份与恢复.md
@@ -24,6 +24,44 @@
 > -- 设置归档日志位置
 > alter system set log_archive_dest_1 = 'path';
 > ~~~
+>
+> **闪回**：短时间内恢复已提交事务的数据
+>
+> ~~~SQL
+> -- SNC：当前数据版本号（新增，修改，删除都存在版本号）与当前时间对应
+> -- 通过传入时间可以查到对应的SNC
+> select timestamp_to_scn(sysdate) SCN, to_char(sysdate,'yyyy-mm-dd hh24:mi:ss') from dual;
+> 
+> -- 恢复表
+> -- 查询该表已提交的所有数据
+> select * from table_name versions between [scn | timestamp] minvalue and maxvalue;
+> -- 回退（闪退）数据
+> alter table table_name enable row movement;
+> flashback table table_name to scn _value;
+> 
+> -- 使用闪退恢复数据库（需要开启归档及Flashback）
+> -- 查看是否开启数据库恢复
+> select flashback_on from v$database;
+> -- 创建恢复空间
+> create flashback archive flashback_all tablespace FLASHBACK retention 10 year;
+> -- 开启数据库闪回功能
+> alter database flashback on ;
+> 
+> -- oracle 回收站功能，查看回收站是否开启
+> select value from v$parameter where name = 'recyclebin';
+> -- 查看回收站数据
+> show recyclebin;
+> -- 清空回收站
+> purge recyclebin;
+> -- 恢复数据
+> flashback table emp to before drop;
+> 
+> -- LogMiner日志挖矿机(获取重做日志和归档日志文件中内容)
+> desc dbms_logmnr;
+> 
+> ~~~
+>
+> 
 
 #### **dmms_datapump**：高速导入导出数据库数据文件（数据泵）
 
@@ -41,4 +79,24 @@
 >  dbms_datapump.detach(h1);
 > ~~~
 >
+
+**备份与恢复**
+
+> ~~~sql
+> -- 手动执行命令备份
+> 
+> -- 暂停表空间使用
+> alter tablespace table_space_name begin backup;
+> -- 复制表空间备份文件
+> host cp path targetpath;
+> -- 恢复表空间使用
+> alter tablespace table_space_name end backup;
+> 
+> -- 恢复表空间数据
+> host cp targetpath path
+> recover datafile file#
+> ~~~
+
+**RMAN备份与恢复**
+
 > 
