数据备份与恢复

--- a/数据库/Oracle/3.数据备份与恢复/数据备份与恢复.md
+++ b/数据库/Oracle/3.数据备份与恢复/数据备份与恢复.md
@@ -99,4 +99,70 @@
 
 **RMAN备份与恢复**
 
+> ~~~SQL
+> -- 配置环境变量连接到指定数据库
+> export ORACLE_SID=SID;
+> -- 默认连接本机实例
+> rman target / 
+> -- 通过网络连接远程实例，需要配置 tnsnames.ora 文件， ORCLE_HOME/network/admin 目录下
+> rman target user/password@orcl
+> -- 切换数据库（需要配置tnsnames.ora文件）
+> connect target user/password@orcl
+> 
+> -- 备份整个数据库  备份文件路径 piece handle=/opt/oracle/product/19c/dbhome_1/dbs/
+> backup databases;
+> 
+> -- 指定资源备份
+> run { 
+> -- 备份路径 %d：数据库名称 %T：时间 %s：Rman产生的序列号
+>   allocate channel c1 type disk format 'path/full_%d_%T_%s';
+>   backup database include current controlfile;
+>   release channel c1;
+> }
+> -- 查看备份消息
+> list backup;
+> 
+> -- 冷备份
+> run {
+> 	-- 关闭数据库
+>    shutdown immediate;
+>    startup mount;
+>    -- 配置路径
+>    allocate channel c1 type disk format 'path/full_%d_%T_%s';
+>    -- 配置备份资源 
+>    backup [database | tablespace | datafile file_id];
+>    -- 释放文件资源
+>    release channel c1;
+>    -- 启动数据库
+>    sql 'alter database open';
+> }
+> 
+> -- 热备份
+> run {
+>    sql 'alter system checkpoint';
+>    sql 'alter system switch logfile';
+>    -- 配置路径
+>    allocate channel c1 type disk format 'path/full_%d_%T_%s';
+>    -- 配置备份资源 
+>    backup [database | tablespace | datafile file_id];
+>    -- 释放文件资源
+>    release channel c1;
+> }
+> -- 增量备份
+> -- 差异增量备份与累加增量备份
+> -- level 0 表示全量备份 
+> backup incremental level 0 datafile file_id format  path;
+> 
+> 
+> -- 从备份文件中恢复控制文件（先恢复控制文件，在恢复数据文件）
+> restore controlfile from 'path';
+> -- 恢复数据
+> run {
+>   startup mount;
+>   restore database;
+>   recover database;
+>   alter database open;
+> }
+> ~~~
+>
 > 
