性能分析与优化

--- a/数据库/Oracle/4.性能诊断与优化/性能诊断与优化.md
+++ b/数据库/Oracle/4.性能诊断与优化/性能诊断与优化.md
@@ -15,4 +15,14 @@
 > - ADDM：优化建议报告（SQL优化，索引创建，统计量的收集）
 > - ASH：记录会话事件
 >
+
+**告警日志**
+
+> 
+>
+> ~~~SQL
+> -- 
+> select * from v$diag_info;
+> ~~~
+>
 > 
