--- a/数据库/MYSQL/3.基准测试与性能调优/基准测试与性能调优.md
+++ b/数据库/MYSQL/3.基准测试与性能调优/基准测试与性能调优.md
@@ -114,7 +114,75 @@
 >   > sysbench --test=memory --memory-block-size=8k --memory-total-size=3G  --memory-access-mode=rnd  run
 >   > ~~~
 >   >
->   > 
+>   > **基于mysql测试**
+>   >
+>   > ~~~Shell
+>   > # 数据准备
+>   > # oltp_read_only，oltp_read_write，oltp_delete，oltp_update_index，oltp_update_non_index，oltp_insert，oltp_write_only
+>   > # 20个线程，10s回报一次数据 生成64张表，每张表10000000条数据
+>   > sysbench --db-driver=mysql --mysql-db=loadtest --report-interval=10 --mysql-user=xxxxxx --mysql-password=xxxxx --mysql-port=3306 --mysql-host=127.0.0.1 --tables=64 --table-size=10000000 --threads=20  oltp_read_write prepare
+>   > ~~~
 >
-> - 
+> - DBT2/DBT3
+>
+> - HammerDB
+
+#### **Mysql服务器配置管理**
+
+> [mysql默认启动参数](mysqld --verbose --help.log)
+>
+> [mysql8.0参考手册](https://dev.mysql.com/doc/refman/8.0/en/server-option-variable-reference.html)
+>
+> [mysql参数列表](Mysql8.0参数.xlsx)
+>
+> ~~~mysql
+> # mysql 默认启动参数
+> mysqld --verbose --help
+> # 查看默认编译参数
+> mysqld --no-defaults --verbose --help
+> 
+> # 检查配置文件my.cnf 或参数是否有问题
+> mysqld --validate-config
+> 
+> # 查看当前实例使用变量
+> show VARIABLES;
+> # 正在运行的一些统计和状态指示器 服务器
+> show status;
+> 
+> 
+> ~~~
+>
+> 
+>
+> 配置文件
+>
+> ~~~ini
+> [mysql]
+> # mysql 数据文件
+> datadir=path
+> # 网络配置文件，本地通过socket连接减少网络开销
+> socket=path
+> # 进程文件
+> pid_file=path
+> 
+> [InnoDB]
+> # InnoDB缓存池大小
+> innnodb_buffer_pool_size=128MB
+> 
+> innnodb_buffer_pool_instances
+> # 备份缓冲池最近使用页数占比
+> innnodb_buffer_pool_dump_pct=25
+> # 页置换停留时间（旧页淘汰停留时间）
+> innnodb_old_blocks_time=1000
+> # 每秒允许InnoDB使用IO次数
+> innnodb_io_capacity=200
+> innnodb_io_capacity_max=2000
+> # 刷盘方式
+> innnodb_flush_method=unbuffered/fsync
+> 
+> ~~~
+>
+> 
+
+
 
