--- a/数据库/MYSQL/3.基准测试与性能调优/基准测试与性能调优.md
+++ b/数据库/MYSQL/3.基准测试与性能调优/基准测试与性能调优.md
@@ -133,7 +133,7 @@
 >
 > [mysql8.0参考手册](https://dev.mysql.com/doc/refman/8.0/en/server-option-variable-reference.html)
 >
-> [mysql参数列表](Mysql8.0参数.xlsx)
+> [mysql参数列表](../2.Mysql架构/Mysql8.0参数.xlsx)
 >
 > ~~~mysql
 > # mysql 默认启动参数
