--- a/Linux/数据流重导向.md
+++ b/Linux/数据流重导向.md
@@ -31,13 +31,13 @@
 >
 > > - cut 以行为切分单位
 > >
-> >   > ![image-20211108220647194](image-20211108220647194.png) 
+> >   > ![image-20211108220647194](Shell数据流重导入/image-20211108220647194.png) 
 > >   >
-> >   > ![image-20211108221127722](image-20211108221127722.png) 
+> >   > ![image-20211108221127722](Shell数据流重导入/image-20211108221127722.png) 
 > >
 > > - grep 搜索关键字符
 > >
-> > > ![image-20211108221321957](image-20211108221321957.png) 
+> > > ![image-20211108221321957](Shell数据流重导入/image-20211108221321957.png) 
 > >
 > > - 排序命令
 > >
@@ -45,12 +45,12 @@
 >
 > #### **双向重导向 tee**
 >
-> > ![image-20211108222016913](image-20211108222016913.png) 
+> > ![image-20211108222016913](Shell数据流重导入/image-20211108222016913.png) 
 > >
 >
 > #### **sed工具**(sed可以将数据取代,删除,新增,截取)
 >
-> > ![image-20211108222531091](image-20211108222531091.png)
+> > ![image-20211108222531091](Shell数据流重导入/image-20211108222531091.png)
 >
 > #### **awk 数据处理工具**
 >
