大数据处理

--- a/大数据/大数据.md
+++ b/大数据/大数据.md
@@ -40,7 +40,7 @@
 >
 > Spark基本概念
 >
-> 1. RDD：分布式数据集（分布式内存）
+> 1. RDD：分布式数据集（分布式内存,数据存储和处理结构）
 > 2. DAG：存储RDD之间依赖关系
 > 3. Task：工作单元
 > 4. 执行器：任务处理器，执行工作单元
@@ -51,5 +51,36 @@
 >
 > - Action：处理RDD并生成新的RDD
 > - Transformation：处理RDD并计算器结果
+>
+> **SparkSQL**：基于Spark的分布式SQL查询引擎，在Spark上执行SQL查询和操作结构化数据
+>
+> 1. DataFrame：以RDD为基础的关系型数据库的表格化数据结构
+> 2. DataSet：DataSet是DataFrame的扩展，提供了类型安全的数据集操作
+>
+> 
+>
+> **SparkStreaming：**流计算及处理
+>
+> - OLAP：多维数据分析处理
+> - OLTP：在线事物处理
+> - <img src="./assets/image-20240323211242289.png" alt="image-20240323211242289" style="zoom:50%;" /> 
+> - 数据流：时间分布，数量上无限的动态数据集合
+>   1. 数据持续产生，数据量大
+>   2. 来源广泛，格式不统一
+>   3. 数据价值低，处理后保存（一般不存储流数据）
+> - 实时处理
+> - 批量处理：指在一定时间间隔内收集和处理大量数据（耗时，用于生成报告，及报表）
+>
+> **SparkMLIib：**Spark机器学习库（数据处理算法）
+>
+> 1. 数据分析算法：分类，回归，聚类，和协同过滤
+>
+> 2. 特征化分析：特征提取，转换，降维，选择
+>
+> 3. 流水线：构建，评估，参数调整
+>
+> 4. 持久化
+>
+>    
 >
 > 
