大数据处理

--- a/大数据/大数据.md
+++ b/大数据/大数据.md
@@ -74,13 +74,8 @@
 > **SparkMLIib：**Spark机器学习库（数据处理算法）
 >
 > 1. 数据分析算法：分类，回归，聚类，和协同过滤
->
 > 2. 特征化分析：特征提取，转换，降维，选择
->
 > 3. 流水线：构建，评估，参数调整
->
 > 4. 持久化
->
->    
->
-> 
+
+#### **Flink**
