--- a/中间件/消息队列/消息队列.md
+++ b/中间件/消息队列/消息队列.md
@@ -2,30 +2,38 @@
 
 消息队列(MQ)是一种系统间相互协作的通信机制，应用在异步处理，系统解耦，流量削峰，日志收集，事务最终一致性（两阶段提交2PC，SAGA算法，补偿事务TCC，本地事件表加消息队列，MQ事务消息）。消息队列的主要组件有Broker（消息处理中心，负责消息的接收，存储，转发），Producer，Consumer。
 
-- #### **AMQP** (Advanced Message Queuing Protocol)  
+- #### **AMQP** (Advanced Message Queuing Protocol)  高级消息队列协议
 
-  > 传输层协议是一个网络级协议，它定义了数据的传输格式，消息队列的客户端可以基于这个协议与消息代理和 AMQP 的相关模型进行交 互通信，该协议的内容包括数据， 吭处理、信道 用、内容编码、心跳检测、数据表示和错误处 理
+  > 一种开放标准协议，用于在应用程序之间进行可靠的消息传递。它定义了一套标准化的消息传递模式，允许不同的消息队列系统互相兼容
   >
-  > **[AMQP](https://www.amqp.org/) 主要组件**
+  > **[AMQP](https://www.amqp.org/) 主要组件**（标准化的协议、灵活的消息路由机制、强大的持久化和确认机制）
   >
-  > - Message：MQ服务所处理数据单元
+  > - Broker：消息代理，管理消息的路由、存储和分发。Broker 负责维护交换机、队列和路由绑定
+  >
   > - Publisher：向交换器发布消息的客户端应用程序
-  > - Exchange：接收Publisher发送的消息并将这些消息路由到服务器中的队列
-  > - Binding：交换机与消息队列的映射
-  > - Broker：消息代理，表示消息队列服务器实体，接受客户端连接，实现 AMQP消息队列和路由功能的过程
-  > - Queue：消息容器，也是消息的终点。
-  > - Channel：独立的双向数据流通道，建立在TCP通讯上，一个连接可以有多个信道
-  > - Consumer
   >
-  > 
+  > - Consumer：从队列中消费消息。消费者订阅队列，并接收队列中的消息
+  >
+  > - Exchange：交换机，接收生产者发送的消息，并根据绑定规则将消息路由到不同的队列
+  >
+  >   1. **Direct Exchange**: 精确匹配消息的路由键。
+  >   2. **Topic Exchange**: 基于模式匹配路由键（支持通配符）
+  >   3. **Fanout Exchange**: 广播模式，将消息发送到所有绑定的队列
+  >   4. **Headers Exchange**: 根据消息头属性匹配消息，而不是路由键。
+  >
+  > - Queue：消息容器，存储来自交换机的消息。消费者从队列中接收消息并进行处理。
+  >
+  > - Binding：定义队列与交换机之间的路由关系。绑定可以指定路由键，确保消息根据特定规则到达指定的队列
+  >
+  > - Routing Key：路由键由生产者发送，决定消息的路由路径（消息流向的队列）
+  >
+  > - Channel：通信通道，建立在TCP连接中，一个TCP有多高Channel
+  >
+  >   
   >
   > **AMQP消息流转**
   >
   > <img src="img\image-20230102140853342.png" alt="image-20230102140853342" style="zoom:67%;" /> 
-  >
-  > *Publish发送数据到Broker，Broker中的Exchange根据路由Key与Queue的映射关系（Binding）将消息存储在目标Queue，Consumer向Broker发送订阅消息时指定监听对应Queue，**当Queue中有数据时，Broker主动推送消息到Consumer**。Publish发布消息时可以指定消息属性（routingkey），内容载体对Broker不可见。**Exchange对不能路由的消息返回或丢弃**。单条消息可以被复制到多个Queue中，以广播形式推送给所有的消费者。Queue存在持久化队列和临时消息队列，持久化队列可以被多个消费者共享，不管是否有消费者接收，它都可以独立存在。**临时消费队列只对某个消费者所独有，当消费者断开连接时，消息队列将被删除***
-  >
-  > 
   >
   > **AMQP消息数据格式**
   >
@@ -37,129 +45,124 @@
 
 - #### **MQTT** (Message Queuing Telemetry Transport 消息队列遥测传输)
 
-  > 轻量、简单、开放和易于实现。应用于很多机器计算能力有限、低带宽、网络不可靠的远程通信应用场景中。
+  > 轻量、简单、开放和易于实现。应用于很多机器计算能力有限、低带宽、网络不可靠的远程通信应用场景中，专为物联网（IoT）设计。
   >
-  > 基于MQTT协议实现的中间件服务器有Apache ActiveMQ，RabbitMQ，Apache Apollc，HiveMQ，ThingMQ，VemeMQ。
+  > ![image-20230102144132517](img\image-20230102144132517.png) 
   >
-  >  ![image-20230102144132517](img\image-20230102144132517.png) 
-  >
-  > 
+  >  
   >
   > **[MQTT](https://mqtt.org/)组件**
   >
-  > - Broker：服务代理
+  > - Broker：服务代理（消息的存储、转发、认证与授权）
+  >- Publisher/Subscriber：发布与订阅
+  > - Topic：主题
   > - Network Connection：网络连接（使用的底层网络传输协议 TCP/UDP）
-  > - Application Message：应用消息，分为主题和负载两部分
-  > - Topic：应用消息的类型，由消费者订阅
-  > - Payload：负载内容，消费者接收到的内容
-  > - Client：包含Publish/Subscriber实现
-  > - Server：转发应用消息给客户端，处理客户端连接请求和订阅请求
-  > - Session：用于客户端与服务器之间逻辑层面通讯
-  > - Subscription：订阅包含一个主题过滤器和Qos服务质量等级。
-  > - MQTT Control Packet：网络连接发送的消息数据包
-  >
+  > - Client：负责与 Broker 建立连接并通过该连接进行消息的发送或接收
+  > - Session：客户端与Broker之间连接状态
+  > - Qos：服务质量等级
+  > - Retain Msg：保留消息，客户端连接到主题后立即接收到消息
+  > - Will Msg：遗嘱消息，客户端户端意外断开连接时，Broker 会自动向指定的主题发布该客户端的遗嘱消息，告知其它客户端该客户端已下线
+  > 
   >  **MQTT数据流转**
-  >
-  > 1. 建立连接，客户端发送服务器第一个报文必须是CONNECT，服务器发送CONNACK报文响应客户端
-  >
-  > 2. 发布消息，客户端发送Publish报文，按照QoS等级服务器将发送对应的应答报文
-  >
-  >    - QoS等级
-  >
-  >      1. 至多一次(0)：最高的传输性能，接收者不需要应答消息，发送者也不保留消息和重发消息（最多1次通信）
-  >
-  >      2. 至少一次(1)：消息至少送到到一次（发送者保留消息，直到接收者返回Puback报文，在规定时间内没接收到Puback报文将重新发送此报文，至少2次通信）
-  >
-  >      3. 只有一次(2)：可保证每条消息只被接收到一次（最慢的服务等级，也是最安全的，至少4次通信）
-  >
-  >         ![image-20230102153902545](img\image-20230102153902545.png) 
-  >
-  > 3. 主题订阅，客户端发送Subscribe报文进行注册对应主题（订阅报文中包含订阅者接收到的报文质量等级）
-  >
-  > 4. 心跳检测，客户端发送PingReq报文给服务器
-  >
-  >    1. 确认网络连接没有断开
+  > 
+  >1. 建立连接，客户端发送服务器第一个报文必须是CONNECT，服务器发送CONNACK报文响应客户端
+  > 
+  >2. 发布消息，客户端发送Publish报文，按照QoS等级服务器将发送对应的应答报文
+  > 
+  >   - QoS等级
+  > 
+  >     1. 至多一次(0)：最高的传输性能，接收者不需要应答消息，发送者也不保留消息和重发消息（最多1次通信）
+  > 
+  >     2. 至少一次(1)：消息至少送到到一次（发送者保留消息，直到接收者返回Puback报文，在规定时间内没接收到Puback报文将重新发送此报文，至少2次通信）
+  > 
+  >     3. 只有一次(2)：可保证每条消息只被接收到一次（最慢的服务等级，也是最安全的，至少4次通信）
+  > 
+  >        ![image-20230102153902545](img\image-20230102153902545.png) 
+  > 
+  >3. 主题订阅，客户端发送Subscribe报文进行注册对应主题（订阅报文中包含订阅者接收到的报文质量等级）
+  > 
+  >4. 心跳检测，客户端发送PingReq报文给服务器
+  > 
+  >   1. 确认网络连接没有断开
   >   2. 确认服务器，客户端能正常通讯
-  > 
+  >
   >  5. 断开连接，客户端向服务器发送Disconnect报文，表示客户端断开连接
-  >
   > 
-  >
-  >    **MQTT数据格式**
-  >
-  > ![image-20230102152242604](img\image-20230102152242604.png) 
-  >
-  > 固定报头结构
-  >
-  > ![image-20230102152327415](img\image-20230102152327415.png) 
-  >
-  > 4~7比特位表示报文类型
-  >
-  > ![image-20230102152449211](img\image-20230102152449211.png) 
-  >
-  > 0~3比特位标识位（无效的标识位将关闭网络连接）
-  >
-  > ![image-20230102152627699](img\image-20230102152627699.png) 
-  >
-  > - Publish类型报文标识，用来标识通信质量
-  >
-  >   - DUP：重发标识，用来保证消息可靠传输。
+  > 
+  > 
+  >   **MQTT数据格式**
+  > 
+  >![image-20230102152242604](img\image-20230102152242604.png) 
+  > 
+  >固定报头结构
+  > 
+  >![image-20230102152327415](img\image-20230102152327415.png) 
+  > 
+  >4~7比特位表示报文类型
+  > 
+  >![image-20230102152449211](img\image-20230102152449211.png) 
+  > 
+  >0~3比特位标识位（无效的标识位将关闭网络连接）
+  > 
+  >![image-20230102152627699](img\image-20230102152627699.png) 
+  > 
+  >- Publish类型报文标识，用来标识通信质量
+  > 
+  >  - DUP：重发标识，用来保证消息可靠传输。
   >  - Qos：服务质量等级
-  >   - Retain：保留表示
+  >  - Retain：保留表示
   >   - 剩余长度
   > 
   
 - #### **STOMP**（Streaming Text Orientated Message Protocol 流文本定向消息协议）
 
-  > *提供双向操作的连接格式，允许客户端与任意消息服务进行交互[STOMP](http://stomp.github.io/)*
-  >
-  > 实现STOMP协议服务组件：Apache Apollo  Apache ActiveMQ，RabbitMQ，HornetQ，StompServer
+  > STOMP 旨在提供一种基于文本的、轻量级的消息传输机制，容易与其它语言及平台集成，纯文本协议：人类可读的格式，消息可以直接通过 telnet 或其他文本工具进行查看和发送
   >
   > 
   >
-  >  **STOMP数据格式**
+  > STOMP数据格式
   >
-  > *Command：第一行，以EOL符结束，第二行是帧头，由冒号组成的键值对，以换行符结束，第三行是Body，以特殊字符^@结束*
+  > - Command：第一行，以EOL符结束，第二行是帧头，由冒号组成的键值对，以换行符结束，第三行是Body，以特殊字符^@结束
   >
-  > ![image-20230105105007231](img\image-20230105105007231.png) 
+  >   - ![image-20230105105007231](img\image-20230105105007231.png) 
   >
-  > **Command：**
+  > - Command：
   >
-  > - CONNECT：客户端连接命令
+  >   1. CONNECT：客户端连接命令
   >
-  > - DISCONNECT：客户端断开与服务器连接
+  >   2. DISCONNECT：客户端断开与服务器连接
   >
-  > - SEND：客户端发送消息命令
+  >   3. SEND：客户端发送消息命令
   >
-  >   > ![image-20230105105523655](img\image-20230105105523655.png) 
+  >      - ![image-20230105105932064](img\image-20230105105932064.png)  
+  >   
+  >   4. SUBSCRIBE/UNSUBSCRIBE：客户端订阅某个目的地消息，与Send一样
+  >   
+  >      > ![image-20230105105912216](img\image-20230105105912216.png) ![image-20230105105932064](img\image-20230105105932064.png)  
+  >   
+  >   5. BEGIN ：开启事务，用于发送消息和确认已经收到消息（发送与确认被视为原子操作）
+  >   
+  >   6. COMMIT ：事务提交到处理队列中
+  >   
+  >   7. ABORT：客户端终止正在执行的事务
+  >   
+  >   8. ACK：在Client模式下确认收到一个订阅消息
+  >   
+  >   9. NACK ：客户端返回服务器没处理改消息，服务器将该消息重新发送到另一个客户端或者丢弃
+  >   
+  >   10. STOMP：客户端以STOMP方式连接服务器
+  >   
+  >       -  ![image-20230105105433242](img\image-20230105105433242.png)
+  >   
+  >   11. CONNECTED：服务端接收到CONNECT命令后返回CONNECTED帧
+  >   
+  >   12. MESSAGE：服务器返回客户端订阅消息
+  >   
+  >   13. RECEIPT：服务器接收到请求后需要告知客户端
+  >   
+  >   14. ERROR
   >
-  > - SUBSCRIBE/UNSUBSCRIBE：客户端订阅某个目的地消息，与Send一样
-  >
-  >   > ![image-20230105105912216](img\image-20230105105912216.png) ![image-20230105105932064](img\image-20230105105932064.png)  
-  >
-  > - BEGIN ：开启事务，用于发送消息和确认已经收到消息（发送与确认被视为原子操作）
-  >
-  > - COMMIT ：事务提交到处理队列中
-  >
-  > - ABORT：客户端终止正在执行的事务
-  >
-  > - ACK：在Client模式下确认收到一个订阅消息
-  >
-  > - NACK ：客户端返回服务器没处理改消息，服务器将该消息重新发送到另一个客户端或者丢弃
-  >
-  > - STOMP：客户端以STOMP方式连接服务器
-  >
-  >   > ![image-20230105105433242](img\image-20230105105433242.png) 
-  >
-  >   ---
-  >
-  > - CONNECTED：服务端接收到CONNECT命令后返回CONNECTED帧
-  >
-  > - MESSAGE：服务器返回客户端订阅消息
-  >
-  > - RECEIPT：服务器接收到请求后需要告知客户端
-  >
-  > - ERROR
+  > 
   >
   >  **Header：**
   >
@@ -167,11 +170,9 @@
   > - content-type：在Send，Message，Error命令下，描述Body格式，否则将当作二进制数据处理
   > - receipt：除Conntect命令外，然后帧都可以设置该Header，服务器在确认时将会使用RCEIPT 命令来处理。
   
-- #### **~~XMPP~~** ~~(可扩展通信与表示协议，基于XML的流式即时通信协议)~~
-
 - #### **JMS** (Java Message Service Java消息服务应用接口)
 
-  > *Java 平台中面向消息中间件的一套规范的JavaAPI接口，类似JDBC由具体厂家实现消息通信*
+  > Java 平台中面向消息中间件的一套规范的JavaAPI接口，类似JDBC由具体厂家实现消息通信
   >
   > - 点对点模型（Point to Point)
   >
@@ -213,7 +214,7 @@
   
 - #### **RabbitMQ**
 
-  > *基于AMQP标准开发的消息中间件，用于分布式系统中存储转发消息，具有可靠性保证，灵活路由，支持消息集群，具有高可用，支持多种协议（通过插件实现MQTT，STOMP协议），多语言客户端，后台管理页面（MannagementUI），跟踪机制（异常消息排查），插件扩展。*
+  > 基于AMQP标准开发的消息中间件，用于分布式系统中存储转发消息，具有可靠性保证，灵活路由，支持消息集群，具有高可用，支持多种协议（通过插件实现MQTT，STOMP协议），多语言客户端，后台管理页面（MannagementUI），跟踪机制（异常消息排查），插件扩展。
   >
   > ![image-20230105162412557](img\image-20230105162412557.png) 
   >
@@ -269,7 +270,7 @@
   >
   >   > <img src="img\image-20230106161905004.png" alt="image-20230106161905004" style="zoom:67%;" /> 
   >   >
-  >   > *当一个队列只有一个消费者时，需要确定不会因为拒绝消费而导致该消费者循环读取*
+  >   > 当一个队列只有一个消费者时，需要确定不会因为拒绝消费而导致该消费者循环读取
   >
   > - 消息预读：设置消费者预读取数量（收到下一个确认回执前一次最多可以消费多少消息）
   >
@@ -277,11 +278,11 @@
   >
   > **流控机制**
   >
-  > *当RabbitMQ服务器出现系统资源达到设置的阈值时，触发流控机制减缓/阻塞生产者发送消息*
+  > 当RabbitMQ服务器出现系统资源达到设置的阈值时，触发流控机制减缓/阻塞生产者发送消息
   
 - #### **ActiveMQ**
   
-  > *ActiveMQ实现JMS，JMX管理，主从管理，消息组同学，消息优先级，延迟接收消息，虚拟接收者，消息持久化，消息队列监控等*
+  > ActiveMQ实现JMS，JMX管理，主从管理，消息组，消息优先级，延迟接收消息，虚拟接收者，消息持久化，消息队列监控等
   >
   > - 支持多语言客户端，多协议（OpenWire，STOMP，AMQP，MQTT）
   > - 完全支持JMS1.1和J2EE1.4规范
@@ -298,12 +299,10 @@
   > - Queue
   > - Message
   >
-  > 
-  >
   > **ActiveMQ连接器**
   >
   > - 传输连接器（客户端连接）
-  >   - vm：客户端和服务器在同一个JVM中，避免网络开销
+  >  - vm：客户端和服务器在同一个JVM中，避免网络开销
   >   - tcp
   >   - udp
   >   - stomp
@@ -313,17 +312,17 @@
   >   - <img src="img\image-20230106164804198.png" alt="image-20230106164804198" style="zoom:50%;" /> 
   >   - static：静态代理配置：static://(tcp:ip:port,tcp://ip2:port)
   >   - multicast：多点传输协议
-  >
+  > 
   > 
   >
   > **消息存储**
   >
   > - AMQ：基于日志方式持久化（不支持事务）
-  > - KahaDB：基于文件并支持事务的存储方式
+  >- KahaDB：基于文件并支持事务的存储方式
   > - JDBC：基于JDBC方式存储在关系数据库中（比较慢）
   > - 内存存储
   > - LevelDB：持久化引擎，性能高于KahaDB
-  >
+  > 
   > 
   >
   > 
@@ -331,17 +330,17 @@
   > **基于ActiveMQ的分布式事务**（本地事件列表添加消息队列方式实现）
   >
   > 1. 在分布式数据库中建立事件表（type，process，content，create_time，update_time....)等字段
-  > 2. 开启定时任务扫描事件表中新增的事件，将事件消息通过ActiveMQ发送到对应系统并更改process状态
+  >2. 开启定时任务扫描事件表中新增的事件，将事件消息通过ActiveMQ发送到对应系统并更改process状态
   > 3. 消费者接收到事件消息后将事件存入事件表，并将事件消息转化对象入库到业务表中，保存成功后修改事件表中状态
-  >
+  > 
   > <img src="img\image-20230107215226678.png" alt="image-20230107215226678" style="zoom:67%;" /> 
   >
-  >  
+  > 
   >
-  > **ActiveMQ配置**
+  >  **ActiveMQ配置**
   >
   > - **消息转发模式**：PERSISTENT（持久化）NON_PERSISTENT（非持久化）
-  >   - java.jms.MessageProducer
+  >  - java.jms.MessageProducer
   >   - ![image-20230107215838026](img\image-20230107215838026.png) 
   >   - NON_PERSISTENT模式下发送消息异步，Producer不需要等待Consumer的receipt消息
   >   - PERSISTENT模式下需要把消息存储后在传递
@@ -357,10 +356,71 @@
   >   - DUPS_OK_ACKNOWLEDGE：自动批量确定，可能导致消息重复消费
   >   - INDIVIDUAL_ACKNOWLEDGE：性能差
   
+- #### **RockerMQ**
+  
+    > - 扩展性强（支持水平扩展）
+    > - 海量消息堆积能力（零拷贝，亿级消息堆积，吞吐量低于Kafka）
+    > - 支持顺序消息（保证生产者，消费者消息顺序一致）
+    > - 支持服务端消息过滤
+    > - **支持事务消息**
+    > - 支持消息回溯消费：消费者对已经成功消费的消息按时间进行重新消费
+    > - 支持消息延迟处理
+    >
+    > **基本概念**
+    >
+    > - Topic：标识同一类业务逻辑的消息。定义数据的分类隔离，定义数据的身份和权限
+    >
+    > - MessageType：按照消息传输特性的不同而定义的分类，用于类型管理和安全校验
+    >
+    >   1. 普通消息
+    >   2. 顺序/并行消息：
+    >   3. 事务消息
+    >   4. 定时/延时消息
+    >   5. 集群消费和广播消费
+    >
+    > - MessageQueue：消息存储和传输的实际容器，也是消息的最小存储单元（所有主题都是由多个队列组成，以此实现队列数量的水平拆分和队列内部的流式存储。队列通过QueueId来做唯一标识和区分，**RockerMQ会轮询主题下的所有队列将消息发送队列**）
+    >
+    >   > ![image-20230110101355169](img\image-20230110101355169.png) 
+    >
+    > - Message
+    >
+    > - Tag：子主题
+    >
+    > - Producer：同步、异步、单向发送
+    >
+    > - Consumer
+    >
+    >   - pull：消费者主动向服务器拉去数据
+    >   - push：Broker推送消息给消费者
+    >
+    > - Broker
+    >
+    >   - 单Master
+    >   - 多Master（宕机节点消息不可订阅）
+    >   - 多Master多Slave（同步双写，性能低，发送消息延迟高，异步复制，Master宕机后部分数据不可用）
+    >
+    > - 名称服务器：保存Broker相关元数据，用于集群Broker水平扩展
+    >
+    >   
+    >
+    >  **基于RocketMQ的分布式事务**（基于2PC两阶段提交）
+    >
+    > <img src="img\image-20230111103511300.png" alt="image-20230111103511300" style="zoom: 50%;" /><img src="img\image-20230111105154386.png" alt="image-20230111105154386" style="zoom: 50%;" />
+    >
+    > 1. 系统A向MQ发送预备消息，确保消息到达Broker中保存
+    > 2. 系统A提交本地事务，根据本地事务执行结果向MQ发送提交消息，二次确认
+    > 3. 消息中间件接收二次确认后，把消息状态设置为可消费，等待订阅者接收消息，消费者基于事件驱动事务，事务提交失败则消息会被MQ重新投递直到事务提交
+    >
+    > ![image-20230111105413290](img\image-20230111105413290.png) 
+    >
+    > ![image-20230111113252940](img\image-20230111113252940.png) 
+    >
+    > 
+  
 
 #### **Kafka**
 
-> *基于分布式的发布/订阅消息系统*
+> 基于分布式的发布/订阅消息系统
 >
 > - 高吞吐量，以时间复杂度为O(1)的方式提供消息持久化能力，对TB及以上的数据保证常数时间访问性能
 > - 消息持久化到磁盘
@@ -432,65 +492,6 @@
 >   - 手动提交：
 >     1. consumer.commitSync()该方法是阻塞的，限制消费端吞吐量
 >     2. consumer.commitAsync(OffsetCommitCallback callback)
-
-#### **RockerMQ**
-
-  > - 扩展性强（支持水平扩展）
-  > - 海量消息堆积能力（零拷贝，亿级消息堆积，吞吐量低于Kafka）
-  > - 支持顺序消息（保证生产者，消费者消息顺序一致）
-  > - 支持服务端消息过滤
-  > - **支持事务消息（RocketMQ，ActiveMQ）**
-  > - 支持消息回溯消费：消费者对已经成功消费的消息按时间进行重新消费
-  > - 支持消息延迟处理
-  >
-  > **基本概念**
-  >
-  > - Topic：标识同一类业务逻辑的消息。定义数据的分类隔离，定义数据的身份和权限
-  >
-  > - MessageType：按照消息传输特性的不同而定义的分类，用于类型管理和安全校验
-  >
-  >   1. 普通消息
-  >   2. 顺序/并行消息：
-  >   3. 事务消息
-  >   4. 定时/延时消息
-  >   5. 集群消费和广播消费
-  >
-  > - MessageQueue：消息存储和传输的实际容器，也是消息的最小存储单元（所有主题都是由多个队列组成，以此实现队列数量的水平拆分和队列内部的流式存储。队列通过QueueId来做唯一标识和区分，**RockerMQ会轮询主题下的所有队列将消息发送队列**）
-  >
-  >   > ![image-20230110101355169](img\image-20230110101355169.png) 
-  >
-  > - Message
-  >
-  > - Tag：子主题
-  >
-  > - Producer：同步、异步、单向发送
-  >
-  > - Consumer
-  >
-  >   - pull：消费者主动向服务器拉去数据
-  >   - push：Broker推送消息给消费者
-  >
-  > - Broker
-  >
-  >   - 单Master
-  >   - 多Master（宕机节点消息不可订阅）
-  >   - 多Master多Slave（同步双写，性能低，发送消息延迟高，异步复制，Master宕机后部分数据不可用）
-  >
-  > - 名称服务器：保存Broker相关元数据，用于集群Broker水平扩展
-  >
-  >  **基于RocketMQ的分布式事务**（基于2PC两阶段提交）
-  >
-  > <img src="img\image-20230111103511300.png" alt="image-20230111103511300" style="zoom: 50%;" /><img src="img\image-20230111105154386.png" alt="image-20230111105154386" style="zoom: 50%;" />
-  >
-  > 1. 系统A向MQ发送预备消息，确保消息到达Broker中保存
-  > 2. 系统A提交本地事务，根据本地事务执行结果向MQ发送提交消息，二次确认
-  > 3. 消息中间件接收二次确认后，把消息状态设置为可消费，等待订阅者接收消息，消费者基于事件驱动事务，事务提交失败则消息会被MQ重新投递直到事务提交
-  >
-  > ![image-20230111105413290](img\image-20230111105413290.png) 
-  >
-  > ![image-20230111113252940](img\image-20230111113252940.png) 
-  >
-  > 
 
 
 
