--- a/中间件/消息队列/消息队列.md
+++ b/中间件/消息队列/消息队列.md
@@ -420,31 +420,40 @@
 
 #### **Kafka**
 
-> 基于分布式的发布/订阅消息系统
+> Kafka技术特性：
 >
-> - 高吞吐量，以时间复杂度为O(1)的方式提供消息持久化能力，对TB及以上的数据保证常数时间访问性能
-> - 消息持久化到磁盘
-> - 支持服务器间的消息分区与分布式消费，保证Partition内消息顺序传输
-> - 消费者主动拉取数据，消息处理状态在消费端维护
-> - 支持离线处理
+> - 顺序写入（以日志方式持久化数据），批处理（多个消息打包成一个批量包发送，减少网络磁盘开销）
+> - 内存映射文件（**Memory-Mapped Files**）：将文件内容与进程的虚拟地址空间建立映射关系（应用程序访问虚拟内存区域中的数据时，操作系统会根据映射关系，从磁盘读取对应的数据块到内存中）减少数据在磁盘、内核空间和用户空间之间的传输次数。多个进程可同时访问虚拟地址，提高数据共享性。
+> - 分区机制：组内每个线程操作不同分区，减少资源竞争
+> - sendfile：允许应用程序直接将数据从一个文件描述符（例如文件或内存映射区域）复制到另一个文件描述符（例如网络套接字），而无需经过内核空间的缓冲区
+>
+> Kafka组件：
+>
+> - Broker：存储和管理消息，负载均衡，复制副本
+>
+> - Producer/Consumer：
+>
+> - Topic：分类消息，数据分布
+>
+> - Partition：主题数据分区，消息队列，消息的持久化，并行处理，数据冗余
+>
+>   - Replica：分区的数据备份
+>
+>   - Comsumer Group：每个组下的消费者偏移量相同，每个分区只能被该组中的一个消费者处理
+>
+>   - 分区与消费者数量关系：每组消费者数量<=Partition达到性能最优化
+>
+>   - 分区平衡：消费者增加或减少时，Kafka 会重新分配消费者对应分区以优化负载
+>
+> - Zookeeper：用于 Kafka 集群的协调和管理
+>
+> - Kafka Connect：数据集成
+>
+> - Kafka Streams ：实时数据流处理的客户端库
 >
 > ![image-20230107223208601](img\image-20230107223208601.png) 
 >
-> **基本概念**
->
-> - Broker
->
-> - Topic：消息类型，在分布式下Topic的消息被存放到多个Broker上
->
-> - Partition：物理Topic分区，一个Topic可以分为多个Partition，每个Partition都是一个有序队列，Patition中的消息都会被分配一个有序ID(offset)
->
->   > Partition是kafka基本存储单元分区，Partition中包含一个或多个Segment，每个Segment包含数据文件和一个与之对应的文件索引，从逻辑上看Partition为数据组，offset为下标，**只能顺序从Partition中读取数据**。一般可以通过增加Patition的数量提高系统吞吐率（增加消息延迟，消费者订阅该主题数量不能超过Patition数量），**生产者对于Partition写可视为并行操作**（没指定partition，key，kafka将轮询方式写入partition)，**消费者并发数量取决于Partition的数量**（消费者数量<=Partition）
->
-> - Producer
->
-> - Consumer
->
-> - Consumer Group：实现Kafka消息广播和单播方案，**一个Topic可以有多个消费组，消费组中只有一个消费者获得消息**，实现消息广播必须有多个消费组
+> 
 >
 > **基于Kafka日志收集**
 >
@@ -471,7 +480,7 @@
 >
 > **Kakfa集群**
 >
-> *通过zk选举出leader，其他副本为follower，所有的生产者数据都发送给leader服务器，然后再由leader把消息发送给follower，follower不处理客户端请求，责任是从leader中复制数据。*
+> 通过zk选举出leader，其他副本为follower，所有的生产者数据都发送给leader服务器，然后再由leader把消息发送给follower，follower不处理客户端请求，责任是从leader中复制数据。
 >
 > **Kakfa发送消息模式**
 >
