--- a/中间件/消息队列/消息队列.md
+++ b/中间件/消息队列/消息队列.md
@@ -501,6 +501,16 @@
 >   - 手动提交：
 >     1. consumer.commitSync()该方法是阻塞的，限制消费端吞吐量
 >     2. consumer.commitAsync(OffsetCommitCallback callback)
+>
+> **KafkaStream**
+>
+> - Stream：不断产生的无界数据记录序列。每个记录都包含键、值、时间戳等信息，
+> - KStream：每条记录都有一个键值对。用于过滤，映射，选择，聚合
+> - GlobalKTable/KTable：变更日志流，存储流转换后的结果
+> - Topology：定义数据处理逻辑的有向无环图（DAG），数据转换流程
+> - ProcessorAPI：数据转换函数
+> - DSL：高级流处理 API（数据转换SQL）
+> - 
 
 
 
