--- a/大数据/物联网.md
+++ b/大数据/物联网.md
@@ -164,11 +164,19 @@
   >
   > **工业物联网平台**：
   >
-  > - 设备注册与接入：IoT Hub是物联网平台的数据入口，负责设备注册、接入和管理。设备通过标准物联网协议将数据上传至平台，平台也可通过IoT Hub下发命令控制设备。它服务于设备开发人员（负责设备接入）和设备管理人员（负责设备管理，包括注册、状态监控、升级、控制和拓扑维护）。
+  > - **设备注册与接入**：IoT Hub是物联网平台的数据入口，负责设备注册、接入和管理。设备通过标准物联网协议将数据上传至平台，平台也可通过IoT Hub下发命令控制设备。它服务于设备开发人员（负责设备接入）和设备管理人员（负责设备管理，包括注册、状态监控、升级、控制和拓扑维护）。
+  >
+  >   1. **产品创建:** 在平台上创建产品，填写产品信息（厂商ID、厂商名称、设备类型、协议类型）并定义产品模型（包含属性、命令、事件）。 例如，对于一个智能锁，模型可能包含“锁状态”、“电池电量”等属性，“开锁”、“关锁”等命令，以及“低电量报警”等事件
+  >   2. **设备注册:**
+  >      - 手动注册: 逐个或批量导入设备信息。平台为每个设备分配唯一的设备名称 (DeviceName) 和设备密钥 (DeviceSecret)。 这些信息需要烧录到设备中。
+  >      - 自动注册: 设备端烧录相同的产品信息 (ProductKey)，连接平台时自动注册，平台分配 DeviceName 和 DeviceSecret。 此方式适用于大规模部署和开箱即用场景，但需注意安全性。 
+  >      -  设备连接方式:设备可直接连接 IoT Hub，或通过边缘节点（例如网关）间接连接。
+  >   3. 设备影子：设备虚拟状态（云端存储的 JSON 文档，反映了设备的属性、期望状态和报告状态）
+  >      - 状态同步/数据持久化：设实时记录设备状态，即使离线也能保存最新状态。设备上线后，可轻松同步云端和设备状态。
+  >      - 离线状态处理/双向通信：应用程序仍然可以通过设备影子与设备进行交互（设备重新连接时下发指令）
+  >      - 事件通知
+  >
+  > - 规则引擎：自动化决策和操作，它允许设备在本地处理数据并根据预定义的规则采取行动
   >
   >   
-  >
-  > - 规则引擎：
-  >
-  > 
 
